RESOLVED FIXED207676
Dark Mode: In Notes, list item becomes invisible in dark mode after outdenting
https://bugs.webkit.org/show_bug.cgi?id=207676
Summary Dark Mode: In Notes, list item becomes invisible in dark mode after outdenting
Ryosuke Niwa
Reported 2020-02-12 19:45:22 PST
Steps To Reproduce: 1. System Preferences —> General —> Appearance = Dark 2. Sign in with an IMAP account with HTML notes (i.e. Gmail) 3. Launch Notes 4. Create a new HTML note 5. Start a numbered list (i.e. type “1.” followed by text) 6. Outdent the list item Result: The test becomes invisible <rdar://problem/56682679>
Attachments
Fixes the bug (9.97 KB, patch)
2020-02-12 20:48 PST, Ryosuke Niwa
no flags
Fixes the bug (8.16 KB, patch)
2020-02-12 23:07 PST, Ryosuke Niwa
no flags
Fixed the bug (8.50 KB, patch)
2020-02-13 17:03 PST, Ryosuke Niwa
timothy: review+
Ryosuke Niwa
Comment 1 2020-02-12 20:48:07 PST
Created attachment 390612 [details] Fixes the bug
Ryosuke Niwa
Comment 2 2020-02-12 22:15:30 PST
Comment on attachment 390612 [details] Fixes the bug Hm... looks like PasteRTFD.TransformColorsOfDarkContent is failing on iOS.
Ryosuke Niwa
Comment 3 2020-02-12 23:02:32 PST
Comment on attachment 390612 [details] Fixes the bug View in context: https://bugs.webkit.org/attachment.cgi?id=390612&action=review > Source/WebCore/editing/ReplaceSelectionCommand.cpp:579 > - return true; > + return hasVisibleNonSemanticColor; Alright, this doesn't work :( Reverting this.
Ryosuke Niwa
Comment 4 2020-02-12 23:07:58 PST
Created attachment 390620 [details] Fixes the bug
Ryosuke Niwa
Comment 5 2020-02-13 12:21:01 PST
Oh, looks like iOS just needs platform specific result for the test due to auto size propert as usual but that should not block the code review.
Timothy Hatcher
Comment 6 2020-02-13 15:16:55 PST
Comment on attachment 390620 [details] Fixes the bug View in context: https://bugs.webkit.org/attachment.cgi?id=390620&action=review > Source/WebCore/editing/EditingStyle.cpp:1385 > + m_mutableStyle->setProperty(CSSPropertyColor, computedValue); This should use id, otherwise CSSPropertyBackgroundColor and CSSPropertyCaretColor will overwrite CSSPropertyColor.
Ryosuke Niwa
Comment 7 2020-02-13 17:03:15 PST
Created attachment 390705 [details] Fixed the bug
Ryosuke Niwa
Comment 8 2020-02-13 18:56:34 PST
Note You need to log in before you can comment on or make changes to this bug.